--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "scrollreveal": "^4.0.9",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.17"
   },
