--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "sass": "^1.49.9",
-    "typescript": "^4.6.2"
+    "sass": "^1.49.9"
   }
 }
